--- a/dashboard-client/package.json
+++ b/dashboard-client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@coreui/coreui": "^4.2.6",
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-react": "^2.1.0",
     "@coreui/react": "^4.8.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,8 +14,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
+    "react-redux": "^8.1.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "sass": "^1.63.4",
+    "simplebar-react": "^3.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
